<resources>
    <string name="app_name">Island Vibes</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="lblVersion">Version</string>
    <string name="btnOK">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="unruly_app">Island Vibes Mobile - The Most Unruly App</string>
    <string name="info">INFO</string>
    <string name="info_warning">Please ensure that you provide your real name (as shown on ID) and a valid email address as this information may be used for special access and/or discounts to Island Vibes events as well as important communications.</string>
    <string name="txtFullName">Full Name:</string>
    <string name="txtEmail">E-mail:</string>
    <string name="txtLName">Last Name:</string>
    <string name="txtFName">First Name:</string>
    <string name="mostUnruly">Now go on and enjoy Android\'s most UNRULY app!!</string>
    <string name="upcoming_events">UPCOMING EVENTS</string>
    <string name="your_unruly_menu">YOUR UNRULY MENU</string>
    <string name="djs">Island Vibes DJs</string>
    <string name="our_top_picks">OUR TOP PICKS</string>
    <string name="latest_mix">LATEST MIX</string>
    <string name="about_island_vibes">ABOUT ISLAND VIBES</string>
</resources>
